# fedora-voice-dictation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  real_time_transcription.py  requirements-dev-py313.txt  requirements-dev.txt  requirements-py313.txt  requirements.txt
.bmad-core/: install-manifest.yaml
.github/workflows/: ci.yaml
docs/: architecture.md  brainstorming-session-results.md  brief.md  front-end-spec.md  prd.md
docs/architecture/: coding-standards.md  components.md  data-models.md  high-level-architecture.md  index.md  introduction.md  tech-stack.md  testing-strategy.md
docs/prd/: checklist-results-report.md  epic-1-foundation-core-dictation-pipeline.md  epic-2-desktop-integration-text-injection.md  epic-3-configuration-model-management.md  epic-4-production-readiness-polish.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  table-of-contents.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1.project-setup.md
src/: __init__.py  __main__.py
src/utils/: logger.py
tests/: conftest.py
tests/unit/: test_version.py
tests/unit/utils/: test_logger.py
